edit review paragraph

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -33,15 +33,19 @@ Scales of Pacific salmon assessment reporting
 CW: Consider cahngng this title to Review of Reference Points in Canada with focus on Pacific Salmon
  -->
 
-Even before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already had LRPs defined as part of their management framework. DFO policy documents such as the "Harvest Decision-Making Framework Incorporating the Precautionary Approach" [@dfoHarvestStrategyCompliant2006] and "Canada's Policy for conservation of Wild Pacific Salmon" [@canadaCanadaPolicyConservation2005] already recommended the establishment of LRPs to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach2021], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore2017], Atlantic salmon [@chaputConsiderationsDefiningReference2015], and Pacific Salmon [@bradfordStatusCultusLake2010; @pestalMethodesMisesJour2012; @dfoWildSalmonPolicy2015; @godboutStockStatusWild2004; @grantEvaluationUncertaintyFraser2011].
+Even before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already had LRPs defined as part of their management framework. DFO policy documents such as the "Harvest Decision-Making Framework Incorporating the Precautionary Approach" [@dfoHarvestStrategyCompliant2006] and "Canada's Policy for conservation of Wild Pacific Salmon" [@canadaCanadaPolicyConservation2005] already recommended the establishment of LRPs to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach2021], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore2017], Atlantic salmon [@chaputConsiderationsDefiningReference2015].For Pacific Salmon, lower and upper benchmarks are generally estimated for each CU. The recommended lower benchmark is $Sgen$, i.e., the spawner abundances that will result in recovery to $S_{MSY}$ in one generation under equilibrium conditions, although alternative quantities can be used in the absence of the required data to estimate $Sgen$ [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks have been adopted for many Pacific Salmon CUs, including Fraser River sockeye salmon [@bradfordStatusCultusLake2010; @grantEvaluationUncertaintyFraser2011], Fraser coho [@dfoWildSalmonPolicy2015] , chum salmon [@godboutStockStatusWild2004], and chinook salmon [@dfoIntegratedBiologicalStatus2016].
 
+
+<!--
+Are there any examples of integrates assessments for Pink salmon? I could not find any. 
+-->
 
 LRPs can be based on multiple stock metrics, including abundance trends, abundance, fishing mortality, and habitat distribution [@chaputConsiderationsDefiningReference2012]. In some instances, multi-dimensional approaches are also used. These approaches are particularly relevant when traditional benchmarks are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multi-dimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs. In Canada,  multi-dimensional managements benchmarks have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab reference points incorporate information from CPUE estimates, egg clutches and discards to extends the scope of precaution and efficacy of the management framework.  In the case study paper (Holt et al. in review), we apply the multi-dimensional assessment approach introduced by (cite Pestal tech report) to approximate the integrated status assessments for Pacific salmon stocks.  
 
 
 The use of LRPs and other reference points and harvest strategies has been gaining considerable interest. Reviews of the application of harvest control rules and reference points can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in the context of data-poor fisheries. In Canada, the royal assent of the revised fisheries act led to a recent effort to review the current and past applications of the precautionary approach policy. Examples include @marentetteSpecificationPrecautionaryApproach2021, who reviewed the use of harvest control rules including the use of target and limit reference points in many fisheries across Canada. Another review can be found in  @kronlundConsiderationsDesignRebuilding2021, who provided an overview of LRPs in the context of rebuilding strategies and in light of Canadian fisheries policy and the revised fisheries act.
 
-In terms of salmonids, @portleyLimitReferencePoints2014 reviews the use of limit reference points (or their absence) for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including LRPs, in the management of salmonids and other semelparous species. The review was focused on the stock/Conservation Unit (CU) level applications of LRPs and provides a comprehensive overview of the different methods available to assess CU status and their historical applications. It also provides considerations on managing multiple stock fisheries or managing multiple stocks as unit, it highlights that mixed stock management requires more precautionary benchmarks to ensure that all stocks remain above their limit reference points. Previous work and guidance on setting LRPs for pacific salmon focused on management at the CU level. The present work expands on the previous work by providing guidance on setting LRPs for management at the SMU level, i.e. a group of CUs, taking into consideration the need to maintain all CUs within an SMU above their limit reference points. 
+In terms of salmonids, @portleyLimitReferencePoints2014 reviewed the use of limit reference points (or their absence) for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including LRPs, in the management of salmonids and other semelparous species. The review was focused on the stock/Conservation Unit (CU) level applications of LRPs and provides a comprehensive overview of the different methods available to assess CU status and their historical applications. It also provides considerations on managing multiple stock fisheries or managing multiple stocks as unit, it highlights that mixed stock management requires more precautionary benchmarks to ensure that all stocks remain above their limit reference points. Previous work and guidance on setting LRPs for pacific salmon focused on management at the CU level. The present work expands on the previous work by providing guidance on setting LRPs for management at the SMU level, i.e. a group of CUs that is jointly managed, taking into consideration the need to maintain all CUs within an SMU above their limit reference points. 
 
 
 
