--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -5,39 +5,51 @@
 
 We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above red as the default method. Aggregate-abundance based LRPs are considered when required for fisheries management (e.g., local or international), and are considered supplemental to the proportion of CUs with status above red. The step-wise approach considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated.
 
-### Data Availability (Steps 1 and 2)
+### Data Availability (Step 1)
 
 The first step is to compile CU-level data to support biological status assessments as described under the Wild Salmon Policy [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018b], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine-spatial scale data on stocks or spawning sites to the CU level. 
 
-For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and are considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Therefore only indicator stocks without significant enhancement were included in our analyses. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating Integrated-Hatchery populations where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. Only stocks with PNI values $\geqslant$ 0.5 were included in the development of LRPs and assessment against those LRPs. <!--CH: comment. This text is repeated in the Case Study paper for WCVI CK. Remove the last two sentences here on PNI, or keep them here, but adjust/shorten them in the Case study paper?--> 
+For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and are considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and not included in assessments of biological status. Therefore only indicator stocks without significant enhancement were included in our analyses. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating Integrated-Hatchery populations where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. Only stocks with PNI values $\geqslant$ 0.5 were included in the development of LRPs and assessment against those LRPs. Stricter definitions of hatchery enhancement were considered (e.g., including only populations with PNI values $\geqslant$ 0.72, Integrated-Wild populations @withlerGeneticallyBasedTargets2018). In practice, applying this stricter threshold resulted in excluding almost all available data for our case study, West Coast Vancouver Island Chinook Salmon, a species that is widely enhanced. Adopting a slightly lower threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding hatchery impacts. <!--CH: comment. some of this text is repeated in the Case Study paper for WCVI CK. Remove the middle two sentences here on PNI, or keep them here, but adjust/shorten them in the Case study paper?--> 
 
 
-Second, CUs with available data to support CU-level assessments are identified. CUs with insufficient data to support assessments are considered data deficient. In particular, CUs are considered data deficient when data on current abundances or trends are missing or insufficient (i.e., no data in the most recent generation, or are of poor quality indicating presence/absence), and/or there are insufficient data to develop CU-specific benchmarks on spawner abundances, such as those derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. In addition, a CU may be data deficient if data to resolve the existence of the CU is missing. For example, Holtby and Ciruna (2007) describe provisional CUs pending acquisition of genetic samples to differentiate them from neighbouring CUs. The specific data requirements for benchmark estimation differ according to the quantitative methods applied and context within which they are applied and therefore are not defined here. For example, benchmarks on spawner abundances developed from hierarchical multistock spawner-recruitment analyses would require fewer years of data than those based on individual stock-recruitment analyses depending on the information captured in the multistock spawner-recruitment data set. Furthermore, changes in environmental drivers over time may result in historical data that are no longer representative of current conditions. Local biological expertise is required to review available data prior to assessments to identify the extent to which they represent current status and trends and can be used to estimate benchmarks.
+### Assessing Data Deficiency (Step 2)
 
-- at least 1 data point in last gen
+Second, CUs with data to support biological assessments are identified. CUs are assessed based on a variety of metrics including abundances and trends, and are considered data deficient when data or benchmarks are insufficient on all metrics. For example, CUs are only considered data deficient when data to assess temporal trends in spawner abundances (over at least 3 generations) and data on current spawner abundances or associated CU-level abundance benchmarks  are missing or insufficient. As a general guideline, we define current spawner abundances as the geometric average spawner abundances over the  most recent generation, where data are insufficient on abundances if there are no data in the most recent generation. For short-term trend analyses, data are considered insufficient if they include less than half of available years or are of low quality representing only presence/absence, similar to criteria applied by @brown2020SummaryAbundance2020 to spawning sites of Chinook salmon in Southern BC. 
 
-<!--CH comment: Should we be more prescriptive about CU-specific data deficiencies? The challenge is finding reports to inform this. How many years of data do we need for robust trend detection? PSE documentation? Brown et al. 2020 on Chinook? Skeena/Nass draft data report? These are not consistent and/or at different scales/metrics. I don't see anything in the SoS scanner draft documentation,  WSPmetrics github readmewiki, but I imagine DD rulesl are built in there somewhere-->
-<!--CH comment: though maybe we can say something about # years required for trend analysis?  I've asked Gottfried and Bronwyn for advice from SoS-->
+CU-specific benchmarks on spawner abundances can be derived from spawner-recruitment models, percentiles of spawner time-series, or habitat characteristics. Data requirements for benchmark estimation on spawner abundances differ according to the methods applied and are not explicitly defined here. For example, spawner-recruitment benchmarks developed from hierarchical multi-stock models require fewer years of data than those based on individual stock-recruitment models. In addition, changes in environmental conditions over time may result in historical data that are no longer representative of current conditions, resulting in data deficiencies related to trend metrics and benchmarks on spawner abundances. Local biological expertise is required to review available data and benchmarks prior to assessments to identify data deficiencies.
+
+In addition, a CU may be data deficient if data to resolve the existence of the CU is insufficient. For example, Holtby and Ciruna (2007) describe provisional CUs pending acquisition of genetic samples to differentiate them from neighbouring CUs. 
+
+Further work ground-truthing, expanding, and updating these guidelines for data deficiencies in the context of different salmon species, life-histories, and metrics is warranted. 
+<!--CH comment: Examples of reports that could inform DD: PSE documentation, Brown et al. 2020, Skeena/Nass draft data report, SoS reports,  WSPmetrics github readmewiki (none on wiki, but I imagine DD rulesl are built in there somewhere-->
+<!--CH comment: I've asked Gottfried and Bronwyn for advice from SoS, no response yet-->
 
 ### Can Data Deficient CUs be Represented by CUs With Data? (Step 3)
+<!-- CH comment: send this section to Lauren Weir and Jim Irvine for review?-->
 
-Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference, though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend published evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data, (ii) environmental drivers are also similar among CUs, .e.g, as reflected by distribution of CUs across biogeoclimatic zones, and (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) habitat capacity of data deficient CU is likely in the range of those represented by CUs with data. 
+Third, the extent to which status of data deficient CUs can be inferred from CUs with data is evaluated. By definition, data deficient CUs do not have data on population dynamics to rigorously evaluate this inference though information on threats and biological characteristics may be available. To infer status for data deficient CUs, at a minimum we recommend providing evidence that: (i) the threats impacting data deficient CUs are likely to be the same as for CUs with data, (ii) environmental drivers are also similar among CUs, .e.g, as reflected by distribution of CUs across biogeoclimatic zones, and (iii) biological characteristics, such as life-history type and dominant age-at-maturity of data-deficient CUs are represented in the CUs with data, and (iv) habitat capacity of data deficient CU is likely in the range of those represented by CUs with data. Evidence supporting these criteria should be clearly documented and reviewed by local expertise. <!--CH: "Representing data deficient CUs with neighbouring data-rich CUs will likely be an exception and not rule."  WHat I meant is that for most SMus, I don't think we can use 1 CU to represent the entire SMU. However, a large number of SMUs may have at least one missing CU....???  I'm unsure where to draw the line and am considering leaving this sentence out.-->
 
-....
-
-Information on threats may be derived from published, peer-reviewed habitat or threats assessments, and may include data on Genetic Stock Identification data from fisheries. CUs with
+Information on **threats** may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitat, climate change, and genetic impacts from hatcheries. Data on genetic stock identification from fisheries can be used to assess similarities in vulnerability to harvest among CUs. CUs that are vulnerable to different threats may have divergent statuses and trends.
 
 
-A biogeoclimatic zone is defined as "a geographic area having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate.", suggesting similar environmental drivers within zones.     (https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf)
+Similarity in **environmental drivers** are reflected within biogeoclimatic zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). These units are identified at the regional level to identify geographic areas that have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon (e.g., ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northeastern BC). CUs with spawning and rearing grounds within different biogeoclimate zones may experience different macroclimates and hence environmental drivers.
 
-...previous notes...
-CUs with similar life-history characteristics are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. 
-Are landscape characteristics and environmental conditions sufficiently similar such that fish in different CUs are likely to respond similarly to common threats?
+CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared with those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, called stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments, and result in different vulnerabilities to physical and biological conditions in those environments.  CUs with different life-history characteristics cannot be used to represent each under under data deficiencies.
+
+**Habitat capacity** have....
+CUs should have similar capacities, even if CUs were strongly correlated but one was much smaller than the others, the small CU would be much more vulnerable to threats than the large CUs.   
+
+
+Overall, our goal in this step is to identify if threats, environments, life-history characteristics and population capacities sufficiently similar among CUs such that status and trends are likely to be consistent. However, in some cases natural variability alone may result in differences in status and trends even if these criteria are met. In a meta-analysis of spawner time-series across Pacific salmon species throughout BC (data extracted from PSE 2021),  pairwise correlations in spawner abundances among CUs within SMUs tend to be positive for  Pink, Chum, Coho, and Sockeye Salmon (Appendix Figure <!-- add Connors unpublished, or add Brendan as co-author. later preferable-->).  Correlations were more variable and sometimes negative for Chinook Salmon. This meta-analysis did not apply the criteria listed above therefore may be provide correlations that are negatively biased relative to the scenario where these critieria were applied. Nevertheless, we suggest caution when representing SMU status  with only a subset of CUs, and recommend evaluating and documenting the risks of incorrectly assigned status of data deficient CUs based on neighboring CUs. <!-- ask Brendan which SMUs were negative to improve this guidance here-->. We also recommend further quantitative evaluation of these criteria using empirical data and in simulation.  
+
+<!--CH comment: ask Diana & Ron to what extent biological information (similarity in biology, life-history, population characteristics of CUs) was used to define SMUs. The working definition of SMU is that they are groups of CUs that are managed together for similar outcomes, and does not specific that the CUs need to be similar bioloigcally -->
+
+
+Ideally we would use additional population level data to assess correlations.
+
 Do data exist to evaluate covariance in returns or spawner abundances among CUs in the historical record to assess the extent to which missing CUs can be represented by those with data? Are conditions similar to those in the historical record, such that covariance observed in the past is likely to still hold?
-Results of meta-analyses of covariance in spawner abundances suggests that covariance among CUs within SMUs tend to be positive for  Pink, Chum, Coho, and Sockeye, and higher than that for Chinook (which is sometimes negative) (Brendan’s Figure). These results suggest caution when representing SMU status for Chinook with only a subset of CUs.
 
 
-Is most of the biological diversity represented by the CUs with data (e.g., as a general rule of thumb are > 50% of CUs are represented)
 
 These criteria are not meant to be prescriptive, but provide general guidelines for assessing possible inference for data deficient CUs. Further research evaluating the value of these criteria (and others) is warranted to better inform this step.
 
