--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -55,19 +55,6 @@
   file = {C\:\\Users\\holtk\\Zotero\\storage\\K2WXVGQ5\\Bue and Hasbrouck - 2001 - Escapement goal review of salmon stocks of Upper C.pdf}
 }
 
-@techreport{canadaCanadaPolicyConservation2005,
-  title = {Canada's Policy for Conservation of Wild {{Pacific}} Salmon},
-  year = {2005},
-  address = {{Vancouver}},
-  institution = {{Fisheries and Oceans Canada}},
-  collaborator = {Canada},
-  langid = {english},
-  lccn = {SH346 .C35 2005},
-  keywords = {Canada,Conservation Government policy,Pacific salmon},
-  annotation = {OCLC: ocm61863454},
-  file = {C\:\\Users\\holtk\\Zotero\\storage\\XH8BPDZC\\Canada - 2005 - Canada's policy for conservation of wild Pacific s.pdf}
-}
-
 @article{chengUpperOceanTemperatures2021,
   title = {Upper {{Ocean Temperatures Hit Record High}} in 2020},
   author = {Cheng, Lijing and Abraham, John and Trenberth, Kevin E. and Fasullo, John and Boyer, Tim and Locarnini, Ricardo and Zhang, Bin and Yu, Fujiang and Wan, Liying and Chen, Xingrong and Song, Xiangzhou and Liu, Yulong and Mann, Michael E. and Reseghetti, Franco and Simoncelli, Simona and Gouretski, Viktor and Chen, Gengxin and Mishonov, Alexey and Reagan, Jim and Zhu, Jiang},
@@ -109,6 +96,17 @@
   pages = {xi + 50 p}
 }
 
+@article{coxCandidateLimitReference2019,
+  title = {Candidate {{Limit Reference Points}} as a {{Basis}} for {{Choosing Among Alternative Harvest Control Rules}} for {{Pacific Herring}} ({{Clupea}} Pallasii) in {{British Columbia}}},
+  author = {Cox, Sean P and Benson, Ashleen J and Cleary, Jaclyn S and Taylor, Nathan G},
+  year = {2019},
+  journal = {Canadian Science Advisory Secretariat Research Document},
+  volume = {2019/050},
+  pages = {viii + 47 p.},
+  langid = {english},
+  file = {C\:\\Users\\holtk\\Zotero\\storage\\YSRSU84K\\Cox et al. - Candidate Limit Reference Points as a Basis for Ch.pdf}
+}
+
 @article{debertinMarineGrowthPatterns2017,
   title = {Marine Growth Patterns of Southern {{British Columbia}} Chum Salmon Explained by Interactions between Density-Dependent Competition and Changing Climate},
   author = {Debertin, Allan J. and Irvine, James R. and Holt, Carrie A. and Oka, Gladys and Trudel, Marc},
@@ -145,8 +143,28 @@
   file = {C\:\\Users\\holtk\\Zotero\\storage\\CIX4WXHG\\The 2017 Fraser Sockeye Salmon (Oncorhynchus nerka.pdf}
 }
 
+@techreport{dfoCanadaPolicyConservation2005,
+  title = {Canada's Policy for Conservation of Wild {{Pacific}} Salmon},
+  year = {2005},
+  address = {{Vancouver}},
+  institution = {{Fisheries and Oceans Canada}},
+  collaborator = {DFO},
+  langid = {english},
+  lccn = {SH346 .C35 2005},
+  keywords = {Canada,Conservation Government policy,Pacific salmon},
+  annotation = {OCLC: ocm61863454},
+  file = {C\:\\Users\\holtk\\Zotero\\storage\\XH8BPDZC\\Canada - 2005 - Canada's policy for conservation of wild Pacific s.pdf}
+}
+
+@techreport{dfoHarvestStrategyCompliant2006,
+  title = {A {{Harvest Strategy Compliant}} with the {{Precautionary Approach}}},
+  author = {DFO},
+  year = {2006},
+  number = {2006/023}
+}
+
 @techreport{dfoIntegratedBiologicalStatus2016,
-  title = {Integrated {{Biological Status}} of {{Southern British Columbia Chinook Salmon}} ({{{\emph{Oncorhynchus}}}} Tshawytscha) under the {{Wild Salmon Policy}}},
+  title = {Integrated {{Biological Status}} of {{Southern British Columbia Chinook Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Tshawytscha}}) under the {{Wild Salmon Policy}}},
   author = {{DFO}},
   year = {2016},
   number = {Can. Sci. Advis. Sec. Sci. Advis. Rep. 2016/042},
@@ -235,6 +253,17 @@
   file = {C\:\\Users\\holtk\\Zotero\\storage\\34EFPHGM\\SAR-AS2006_023_E.pdf}
 }
 
+@article{forrestAssessmentPacificCod2020,
+  title = {Assessment of {{Pacific Cod}} ({{Gadus}} Macrocephalus) for {{Hecate Strait}} and {{Queen Charlotte Sound}} ({{Area 5ABCD}}), and {{West Coast Vancouver Island}} ({{Area 3CD}}) in 2018},
+  author = {Forrest, R E and Anderson, S C and Gr, in and C.J. and Starr, P J},
+  year = {2020},
+  journal = {Canadian Science Advisory Secretariat Research Document},
+  volume = {2020/070},
+  pages = {v + 215 p.},
+  langid = {english},
+  file = {C\:\\Users\\holtk\\Zotero\\storage\\II8LADHQ\\Forrest et al. - Assessment of Pacific Cod (Gadus macrocephalus) fo.pdf}
+}
+
 @book{foxAppliedRegressionAnalysis2016,
   title = {Applied {{Regression Analysis}} and {{Generalized Linear Models}}},
   author = {Fox, John},
@@ -251,6 +280,21 @@
   series = {Intergovernmental {{Panel}} on {{Climate Change}}},
   pages = {7},
   langid = {english}
+}
+
+@article{freshwaterBenefitsLimitationsIncreasing2020,
+  title = {Benefits and Limitations of Increasing the Stock-Selectivity of {{Pacific}} Salmon Fisheries},
+  author = {Freshwater, Cameron and Holt, Kendra R. and Huang, Ann-Marie and Holt, Carrie A.},
+  year = {2020},
+  month = jun,
+  journal = {Fisheries Research},
+  volume = {226},
+  pages = {105509},
+  issn = {01657836},
+  doi = {10.1016/j.fishres.2020.105509},
+  abstract = {Population diversity can stabilize ecological dynamics and increase resilience to future environmental change. In exploited systems, however, management goals to preserve diversity may be in tension with harvest objectives. For example, fisheries managers may forgo opportunities to sustainably harvest abundant populations to reduce risks to less productive populations. Increasing the stock selectivity of fisheries is one management lever that may allow for both conservation- and catch-based objectives to be met. We developed a model that simulates the dynamics of a Pacific salmon stock aggregate and its fishery to evaluate how changing allocations between mixed- and single-stock fisheries influences management performance. We focused on relatively generic management strategies that may be implemented in a range of salmon fisheries. Additionally, we examined how the relative performance of mixed- and single-stock fisheries may change under alternative ecological and management scenarios. We found that increasing single-stock fishery allocations increased aggregate abundance and improved the status of some stocks relative to their conservation benchmarks. However, these improvements did not occur uniformly\textendash relatively abundant, productive stocks exhibited no change, or even declines, in conservation performance as single-stock fishery allocations increased. Furthermore, differences in performance between mixed- and single-stock fisheries were reduced when productivity was uniformly low, when the mixedstock fishery was managed conservatively, or when mortality during freshwater migrations was high. While single-stock fisheries can increase the probability that conservation-based objectives will be met, they are not a panacea and may only be effective when specific conditions are met.},
+  langid = {english},
+  file = {C\:\\Users\\holtk\\Zotero\\storage\\Q2PQ5PLN\\Freshwater et al. - 2020 - Benefits and limitations of increasing the stock-s.pdf}
 }
 
 @misc{governmentofcanadaFisheryDecisionmakingFramework2009,
@@ -327,6 +371,18 @@
   abstract = {The goal of Canada's Wild Salmon Policy (WSP) is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity. To achieve that goal, the WSP requires that biological status be assessed for all geographically, ecologically, and genetically distinct populations, or Conservation Units (CUs). One component of that assessment is identifying quantifiable metrics of biological status and benchmarks along those metrics. Here, we provide a toolkit of metrics and benchmarks of status, which will set the stage for future CU assessments. Specifically, we propose a multi-criteria approach for assessing status that uses information on current abundances, trends in abundance over time, distribution of spawners, and fishing mortality relative to stock productivity. That approach captures the multiple dimensions of population status that will be important to achieve WSP goals better than assessments based on abundances alone. Furthermore, any redundancy in information content among criteria may allow for increased flexibility when assessing stocks that differ widely in data quantity and quality. Here, we identify quantifiable metrics and candidate benchmarks drawn from the scientific literature and previous management experience. Using a simulation model, we further evaluate a subset of those benchmarks on two performance metrics: the probability of extirpation over the long term and the probability of recovery to a target. Finally, we apply those metrics and candidate benchmarks to two example CUs, Takla/Trembleur sockeye salmon (Early Stuart run-timing group of the Fraser River) and Hecate Strait Lowlands pink salmon (odd year).},
   langid = {english},
   file = {C\:\\Users\\holtk\\Zotero\\storage\\MHF9YRE8\\Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf}
+}
+
+@book{holtQuantitativeToolEvaluating2020b,
+  title = {A Quantitative Tool for Evaluating Rebuilding Plans for {{Pacific}} Salmon},
+  author = {Holt, C. A and Freshwater, C. and Holt, K.R. and Huang, A.M.},
+  year = {2020},
+  series = {Canadian {{Technical Report}} of {{Fisheries}} and {{Aquatic Sciences}}},
+  volume = {3402},
+  abstract = {"Rebuilding plans are required for depleted stocks under the Fish Stock Provisions of Canada's revised Fisheries Act (2019) and DFO's Sustainable Fisheries Framework (2009). The overall goal of this project was to create a tool for developing and evaluating the harvest component of rebuilding plans for Pacific salmon, which evaluates trade-offs between conservation objectives and other fisheries management objectives"--Abstract.},
+  isbn = {978-0-660-35946-5},
+  langid = {english},
+  annotation = {OCLC: 1199014307}
 }
 
 @misc{ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006,
@@ -442,6 +498,38 @@
   file = {C\:\\Users\\holtk\\Zotero\\storage\\GBV66ZBR\\Meengs and Lackey - 2005 - Estimating the Size of Historical Oregon Salmon Ru.pdf}
 }
 
+@article{ohlbergerBayesianLifecycleModel2019,
+  title = {A {{Bayesian}} Life-Cycle Model to Estimate Escapement at Maximum Sustained Yield in Salmon Based on Limited Information},
+  author = {Ohlberger, Jan and Brenkman, Samuel J. and Crain, Patrick and Pess, George R. and Duda, Jeffrey J. and Buehrens, Thomas W. and Quinn, Thomas P. and Hilborn, Ray},
+  year = {2019},
+  month = feb,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {76},
+  number = {2},
+  pages = {299--307},
+  issn = {0706-652X, 1205-7533},
+  doi = {10.1139/cjfas-2017-0382},
+  abstract = {Life-cycle models combine several strengths for estimating population parameters and biological reference points of harvested species and are particularly useful for those exhibiting distinct habitat shifts and experiencing contrasting environments. Unfortunately, time series data are often limited to counts of adult abundance and harvest. By incorporating data from other populations and by dynamically linking the life-history stages, Bayesian life-cycle models can be used to estimate stagespecific productivities and capacities as well as abundance of breeders that produce maximum sustained yield (MSY). Using coho salmon (Oncorhynchus kisutch) as our case study, we show that incorporating information on marine survival variability from nearby populations can improve model estimates and affect management parameters such as escapement at MSY. We further show that the expected long-term average yield of a fishery managed for a spawner escapement target that produces MSY strongly depends on the average marine survival. Our results illustrate the usefulness of incorporating information from other sources and highlight the importance of accounting for variation in marine survival when making inferences about the management of Pacific salmon.},
+  langid = {english},
+  file = {C\:\\Users\\holtk\\Zotero\\storage\\YGHGBLD2\\Ohlberger et al. - 2019 - A Bayesian life-cycle model to estimate escapement.pdf}
+}
+
+@article{olmosEvidenceSpatialCoherence2019,
+  title = {Evidence for Spatial Coherence in Time Trends of Marine Life History Traits of {{Atlantic}} Salmon in the {{North Atlantic}}},
+  author = {Olmos, Maxime and Massiot-Granier, F{\'e}lix and Pr{\'e}vost, Etienne and Chaput, G{\'e}rald and Bradbury, Ian R and Nevoux, Marie and Rivot, Etienne},
+  year = {2019},
+  month = mar,
+  journal = {Fish and Fisheries},
+  volume = {20},
+  number = {2},
+  pages = {322--342},
+  issn = {1467-2960, 1467-2979},
+  doi = {10.1111/faf.12345},
+  abstract = {A hierarchical Bayesian life cycle model is presented that considers spatial covariation of marine life history traits of Atlantic salmon (Salmo salar) populations in the North Atlantic. The model is based on a collective analysis of the dynamics of 13 stock units (SUs) from two continental stock groups (CSGs) in North America and Southern Europe in a single hierarchical model over the period 1971\textendash 2014. The model sets up a new assessment framework for Atlantic salmon stocks. It also provides a framework to investigate the drivers of changes in Atlantic salmon population dynamics including disentangling the effects of fisheries from those of environmental factors in a hierarchy of spatial scales. It is used to test the hypothesis of a strong spatial synchrony in marine life history dynamics of Atlantic salmon populations. The trends in two key parameters associated with the early marine phase of the life cycle are estimated: (i) the marine survival during the first summer\textendash autumn spent at sea and (ii) the proportion of fish maturing after the first winter at sea. The results provide evidence of a decline in the marine survival together with an increase in the proportion of fish that mature after the first winter at sea, common to all SUs. Our results show an increased coherence in the covariations of trends in these two marine life history traits related to geographic proximity of SUs which support the hypothesis of a coherent response of geographically proximate Atlantic salmon populations that likely share similar migration routes.},
+  langid = {english},
+  file = {C\:\\Users\\holtk\\Zotero\\storage\\GRGK4RN9\\Olmos et al. - 2019 - Evidence for spatial coherence in time trends of m.pdf}
+}
+
 @techreport{otisEscapementGoalsSalmon2004,
   title = {Escapement Goals for Salmon Stocks in {{Lower Cook Inlet}}, {{Alaska}}},
   author = {Otis, Edward O and Hasbrouck, James J},
@@ -497,7 +585,8 @@
   title = {Algorithms for {{Rapid Status Approximation}} for {{Pacific Salmon Derived}} from {{Integrated Expert Assessments}} under {{Canada}}'s {{Wild Salmon Policy}}},
   author = {Pestal, Gottfried and MacDonald, Bronwyn and Grant, Sue and Holt, Carrie},
   year = {2021},
-  journal = {Canaidan Technical Report of Fisheries and Aquatic Sciences}
+  journal = {Canaidan Technical Report of Fisheries and Aquatic Sciences},
+  file = {C\:\\Users\\holtk\\Zotero\\storage\\3UFX5IGZ\\Pestal et al. - 2021 - Algorithms for Rapid Status Approximation for Paci.pdf}
 }
 
 @techreport{pistonChumSalmonStock2011,
