--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -152,11 +152,9 @@ knitr::include_graphics("figure/coho-compareSRFits-IM.png")
 ## LRP Estimation: Proportion of CUs
 ### Methods
 
-We looked at the proportion of CUs that had multi-dimensional rapid status assessments above the red zone to determine in which years between 1998 and 2020 the LRP would have been breached. Status was assessed as being below the LRP in years in which one or more CUs assessed as having red status. Both Ricker model formulations described above were used to estimate relative abundance-based benchmarks (lower benchmark = $S_{gen}$ and upper benchmark = 0.8$S_{MSY}$) when assessing multi-dimensional rapid stats: the base Ricker model and the Ricker_priorCap model. Estimates of $S_{gen}$ and $S_{MSY}$were made using all data available up to 2020, so our evaluation is not a true retrospective analysis in which only the data available up to each year in a time series are used to estimate status. 
+We looked at the proportion of CUs that had multi-dimensional rapid status assessments above the red zone to determine in which years between 1998 and 2020 the LRP would have been breached. Status was assessed as being below the LRP in years in which one or more CUs assessed as having red status. Both Ricker model formulations described above were used to estimate relative abundance-based benchmarks (lower benchmark \= $S_{gen}$ and upper benchmark \= 0.8$S_{MSY}$) when assessing multi-dimensional rapid stats: the base Ricker model and the Ricker_priorCap model. Estimates of $S_{gen}$ and $S_{MSY}$ were made using all data available up to 2020, so our evaluation is not a true retrospective analysis in which only the data available up to each year in a time series are used to estimate status.
 
-For comparison, we also looked at the proportion of CUs that were below $S_{gen}$ in each year and the proportion of CUs that failed to meet the IFCRT distributional target of at least half of all sub-populations within each CU having more than 1000 spawners. 
-
-\linebreak
+For comparison, we also looked at the proportion of CUs that were below $S_{gen}$ in each year and the proportion of CUs that failed to meet the IFCRT distributional target of at least half of all sub-populations within each CU having more than 1000 spawners.  
 
 ### Results
 
@@ -164,11 +162,11 @@ Estimates of $S_{gen}$ based on the Ricker_priorCap model were higher than those
 
 When CU status was assessed using the multidimensional scanning tool with abundance-based benchmarks based on $S_{gen}$ and 0.8$S_{MSY}$ used as inputs, CU status was always assessed as red for years in which the generational average spawning abundance dropped below $S_{gen}$, regardless of which stock recruit model was used to estimate benchmarks (Figures \@ref(fig:coho-CU-multiDim-Ricker), \@ref(fig:coho-CU-multiDim-Ricker-Cap)). This result occurs because because according to the  multidimensional decision tree (Figure \@ref(fig:decision-tree), status is derived from abundance-based benchmarks in most years, which means that being below $S_{gen}$ is most often the trigger for a red CU status assessment. An exception to this occurs in the Fraser Canyon CU in years 2015-2017.  In these years, the generational average of absolute spawning abundance is < 1500 spawners, which means that the CU is assigned red status under the first node of the decision tree even though spawning abundances are above $S_{gen}$ (Figure \@ref(fig:decision-tree)). As a result, when multidimensional status was assessed using abundance-based benchmarks estimated from the base Ricker model, a proportion-based LRP for the SMU would have been breached in 3 of 21 years (2015-2017) based on Fraser Canyon spawning abundances dropping below 1500 spawners in theses years.  When mutlidimensional status was assessed using abundance-based benchmarks from the Ricker-priorCap model, a proportion-based LRP would have been breached in 7 of 21 years (2000, 2006-2008, 2015-2017) based on a combination of spawning abundances < 1500 in the Fraser Canyon CU and spawning abundances < $S_{gen}$ in other CUs. Multidimensional status based on the rapid screening tool was above red for all CUs in the most recent year, 2020, indicating that the SMU is currently above a proportion-based LRP.
 
-```{r coho-CU-multiDim-Ricker, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multi-dimensional rapid status assessments above red when Sgen was estimated using the Ricker model, while red dots indicate years in which one or more CUs had multi-dimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-CU-multiDim-Ricker, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker model, while red dots indicate years in which one or more CUs had multi-dimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker.png")
 ```
 
-```{r coho-CU-multiDim-RickerCap, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multi-dimensional rapid status assessments above red when Sgen was estimated using the Ricker_priorCap model, while red dots indicate years in which one or more CUs had multi-dimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker_priorCap model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-CU-multiDim-RickerCap, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker\\_priorCap model, while red dots indicate years in which one or more CUs had multidimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker\\_priorCap model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker-Cap.png")
 ```
 
